<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activity.UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/update_staff_details"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/curved_rect_gray_bg"
            android:hint="@string/name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edtDesignation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/curved_rect_gray_bg"
            android:hint="@string/designation"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edtCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/curved_rect_gray_bg"
            android:hint="@string/count"
            android:inputType="number"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="6dp"
                android:layout_weight="0.1"
                android:background="@drawable/curved_rect_green_bg"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="6dp"
                android:layout_weight="0.1"
                android:background="@drawable/curved_rect_red_bg"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>